# codervisor

./: .gitignore  README.md  package.json
.github/workflows/: ci-rust.yml  ci-typescript.yml  sync-to-children.yml
ising/: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TECH_DESIGN_NEW.md  plan.md
ising/.claude/: settings.json
ising/ising-analysis/: Cargo.toml
ising/ising-analysis/src/: boundary_health.rs  lib.rs  signals.rs  stress.rs
ising/ising-builders/: Cargo.toml
ising/ising-builders/src/: change.rs  common.rs  lib.rs  structural.rs
ising/ising-builders/src/languages/: c_lang.rs  cpp.rs  csharp.rs  go.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  typescript.rs
ising/ising-cli/src/: main.rs
ising/ising-core/src/: boundary.rs  config.rs  fea.rs  graph.rs  lib.rs  metrics.rs  path_utils.rs
ising/ising-db/src/: export.rs  lib.rs  queries.rs  schema.rs
ising/ising-server/: Cargo.toml
ising/ising-server/src/: lib.rs
ising/scripts/: bench-oss-repos.sh
ising/specs/011-fastapi-validation-findings/: README.md
ising/specs/014-viz-infrastructure/: README.md
scripts/: bootstrap.sh  publish-to-children.sh  subtree-add.sh  subtree-pull.sh  subtree-push.sh  sync-ci.js  sync-claude.js  sync-hooks.js
scripts/cloud/: common.sh  ising.sh  meta.sh  stiglab.sh  synodic.sh  telegramable.sh
skills/: README.md
skills/.claude/: settings.json
stiglab/.claude/: settings.json
synodic/.claude/: settings.json
telegramable/: tsconfig.json
telegramable/.claude/: settings.json
(+23 files in other folders)
